Fixed hasAttribute for non-mapped attributes, b=120607, r=bzbarsky@mit.edu, sr=jst, a=blizzard/drivers